--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link href="/icon.svg" rel="icon" type="image/svg+xml" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>小M-的个人博客</title>
+  <title>Vite-Vue3</title>
 </head>
 <body>
 <div id="app"></div>
